# roblox-lua-autofills

./: .editorconfig  .gitignore  .vscodeignore  CHANGELOG.md  README.md  SETUP.md  package-lock.json  package.json  snippets.json  tsconfig.json  tslint.json
.github/workflows/: companion.yml  companion_check.yml  companion_release.yml  rust.yml
companion/: .gitignore  Cargo.toml
companion-bindings/: README.md  package.json
companion-bindings/lib/: index.d.ts  index.js
companion-bindings/native/: Cargo.toml
companion-bindings/native/src/: lib.rs
companion/src/: lib.rs  main.rs  module_dumps.rs
companion/tests/: test_module_dump.rs
companion/tests/module_dumps/: assigned_global.json  assigned_global.lua  assigned_instantly.json  assigned_instantly.lua  assigned_instantly_and_later.json  assigned_instantly_and_later.lua  assigned_later.json  assigned_later.lua  assigned_later_as_function.json  assigned_later_as_function.lua  no_return.lua  returns_not_table.lua
src/: autocompleteDump.ts  color.ts  companion.ts  dump.ts  enum.ts  extension.ts  instance.ts  itemStruct.ts  luaLibrary.ts  roact.ts  rojo.ts  services.ts
