[package]
name = "companion"
version = "0.1.0"
authors = ["Kampfkarren <boynedmaster@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
full_moon = "0.4.0-rc.3"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"

[dev-dependencies]
pretty_assertions = "0.6"
serde_json = "1.0"