[package]
name = "companion"
version = "0.1.0"
authors = ["Kampfkarren <boynedmaster@gmail.com>"]
edition = "2018"

[[bin]]
name = "companion"
path = "src/main.rs"

[dependencies]
# full_moon = "0.4.0-rc.3"
full_moon = { git = "https://github.com/Kampfkarren/full-moon" }
jsonrpc-core = "13"
jsonrpc-stdio-server = "13"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.6"
serde_json = "1.0"