[package]
name = "companion-bindings"
version = "0.1.0"
authors = ["Kampfkarren <kampfkarren@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "companion_bindings"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
companion = { path = "../../companion" }
neon = "0.3.1"
